--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       var WebEmarsysSdk = WebEmarsysSdk || []
       WebEmarsysSdk.push(['init', {
         applicationCode: 'EMS9E-F995A', // your Domain code obtained above
+        safariWebsitePushID: 'web.ems.training', 
         defaultNotificationTitle: 'Your Default Title', // sets your default title for push notifications
         defaultNotificationIcon: 'https://yoursite.com/img/your-logo.png', // URL to your notification icon
         autoSubscribe: false, // If true, prompts a user to subscribe for pushes upon SDK initialization which is not recommended
