--- a/index.html
+++ b/index.html
@@ -1,97 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Web Push Training</title>
-    <script
-        src="https://code.jquery.com/jquery-1.12.4.js"
-        integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
-        crossorigin="anonymous">
-    </script>
-    <script
-        src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
-        integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
-        crossorigin="anonymous">
-    </script>
-    <script src="https://redirector.gservice.emarsys.net/ui/latest/js/app.js"></script>
-    <link rel='stylesheet' href='https://redirector.gservice.emarsys.net/ui/latest/css/app.css'>
-    <link rel='stylesheet' href='style.css'>
+  <title>Web Push Training</title>
+  <script
+    src="https://code.jquery.com/jquery-1.12.4.js"
+    integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
+    crossorigin="anonymous">
+  </script>
+  <script
+    src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+    integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+    crossorigin="anonymous">
+  </script>
+  <script src="https://redirector.gservice.emarsys.net/ui/latest/js/app.js"></script>
+  <link rel='stylesheet' href='https://redirector.gservice.emarsys.net/ui/latest/css/app.css'>
 
-    <script type="text/javascript" src="https://assets.emarsys.net/web-emarsys-sdk/4.2.0/web-emarsys-sdk.js" async></script>
-    <script type="text/javascript">
-      var WebEmarsysSdk = WebEmarsysSdk || []
-            WebEmarsysSdk.push(['init', {
-              applicationCode: 'EMS9E-F995A', // your Domain code obtained above
-              safariWebsitePushID: 'web.ems.training', //  unique reverse-domain string, obtained in you Apple Developer Portal
-              defaultNotificationTitle: 'Your Default Title', // sets your default title for push notifications
-              defaultNotificationIcon: 'https://yoursite.com/img/your-logo.png', // URL to your notification icon
-              autoSubscribe: false, // If true, prompts a user to subscribe for pushes upon SDK initialization which is not recommended
-              serviceWorker: {
-                url: 'sw.js',
-                applicationServerPublicKey: 'BBR9_y7sJXX29nouTmykOXgJIXADeWnERTbJ7WiwZkfrz2QCohrk_BtKVp09rcZIxZgnHN0D5GVcQFf04SGEPx4'
-              }
-        }])
-    </script>
 </head>
-    <body>
-      <header class="header">
-        <div class="e-container">
-          <div class="e-box">
-            <h1>
-              Web Push Training
-            </h1>
-            <p>
-              <button class="e-btn e-btn-secondary" onclick="subscribe()">Subscribe</button>
-            </p>
-            <p>
-              <div>
-                <form id="loginForm">
-                  <input class="e-input e-input-small" type="text" name="contactFieldId" placeholder="Field ID">
-                  <input class="e-input e-input-large" type="text" name="contactFieldValue" placeholder="Contact Field Value">
-                  <button id="loginButton" class="e-btn e-btn-primary" type="submit">Set Contact</button>
-                </form>
-              </div>
-            </p>
-            <p>
-              <div>
-                <form id="customEventForm">
-                  <input class="e-input e-input-large" type="text" name="customEvent" placeholder="Custom event">
-                  <button id="customEventButton" class="e-btn e-btn-primary" type="submit">Track Custom Event</button>
-                </form>
-              </div>
-            </p>
-          </div>
+  <body>
+    <header class="header">
+      <div class="e-container">
+        <div class="e-box">
+          <h1>
+            Web Push Training
+          </h1>
+          <p>
+            <button class="e-btn e-btn-secondary" onclick="subscribe()">Subscribe</button>
+          </p>
+          <p>
+            <div>
+              <form id="loginForm">
+                <button id="loginButton" class="e-btn e-btn-primary" type="submit">Login</button>
+              </form>
+            </div>
+          </p>
+          <p>
+            <div>
+              <form id="customEventForm">
+                <input class="e-input e-input-large" type="text" name="customEvent" placeholder="Custom event">
+                <button id="customEventButton" class="e-btn e-btn-primary" type="submit">Track Custom Event</button>
+              </form>
+            </div>
+          </p>
         </div>
-        <div id="footer">
-        </div>
-      </header>
+      </div>
+      <div id="footer">
+      </div>
+    </header>
 
-      <script>
-        $('#loginForm').submit(function(e) {
-          e.preventDefault();
-          const fieldId = $('#loginForm input[name="contactFieldId"]').val()
-          const fieldValue = $('#loginForm input[name="contactFieldValue"]').val()
-          const contactInfo = { 
-            fieldId: Number(fieldId), 
-            fieldValue: fieldValue
-          }
-          console.log('Contact Info: ' + JSON.stringify(contactInfo))
-          WebEmarsysSdk.login(contactInfo)
-        })
+    <script>
+      $('#loginForm').submit(function(e) {
+        e.preventDefault();
+        window.location.href = 'login.html';
+      })
 
-        $('#customEventForm').submit(function(e) {
-          e.preventDefault();
-          const customEvent = $('#customEventForm input[name="customEvent"]').val()
-          console.log('Custom Event: ' + customEvent)
-          WebEmarsysSdk.customEvent(customEvent, { k1: 'v1', k2: 'v2' }).then((success) => {
-            console.log('Sending custom event result:', success)
-          }).catch(err => {
-            console.error('Error during custom event sending', err)
-          })
-        })
+      $('#customEventForm').submit(function(e) {
+        e.preventDefault();
+        const customEvent = $('#customEventForm input[name="customEvent"]').val();
+        console.log('Custom Event: ' + customEvent);
+        // custom event
+      })
 
-        function subscribe() {
-          WebEmarsysSdk.subscribe()
-        }
-      </script>
-    </body>
+      function subscribe() {
+        // subscribe
+      }
+    </script>
+  </body>
 </html>
