--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       })
 
       function subscribe() {
-        // subscribe
+        WebEmarsysSdk.subscribe()
       }
     </script>
   </body>
