--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
             WebEmarsysSdk.login(contactInfo)
 
             alert("You're logged in!");
-            window.location.href = 'index.html';
+            // window.location.href = 'index.html';
           } 
         } catch(e) {
           alert('Error: ' + e);
