--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
               </form>
             </div>
           </p>
+          <a href="https://lifestyle-labels-app.web.app/ems/?app=Shop&utm_medium=other&utm_source=emarsys_apppush&utm_campaign=22042024%20App%20Exclusive%2015%%20off%20-%20App%20Push&ems_dl=210268110_ZVwwYrYUFR_1_100302293_1_2000000">
+              Deep Link Test
+          </a>
         </div>
       </div>
       <div id="footer">
